add linux kernel v6.8.12 as submodule
linux kernel v6.8.12 is added as submodule along with a custom .config
with the purpose of running such kernel in a Qemu/KVM env.

External patches will be added to this submodule for building up a
customized kernel image.

Signed-off-by: Andrea Mayer <andrea.mayer@uniroma2.it>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tests/vm"]
 	path = tests/vm
 	url = https://github.com/netgroup/linux-kernel-qemu-setup.git
+[submodule "kernel/linux"]
+	path = kernel/linux
+	url = https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git
