--- a/kernel/modules/Makefile
+++ b/kernel/modules/Makefile
@@ -1,8 +1,19 @@
 obj-m := snf_lkm.o
 
-all:
+KMOD_NAME := $(basename $(obj-m))
+KMOD := $(KMOD_NAME).ko
+SHARED_FOLDER := shared
+
+.PHONY: all build install clean
+
+all: build install
+
+build:
 	make -C linux M=$(shell pwd) modules
 	rm -r -f *.mod.c .*.cmd *.symvers *.o
+
+install:
+	cp -av $(KMOD) shared
 
 clean:
 	make -C linux M=$(shell pwd) clean
