add the ENV DEBIAN_FRONTEND=noninteractive Directive to Dockerfile
The line ENV DEBIAN_FRONTEND=noninteractive sets an environment variable
that prevents Debian-based package managers from prompting for user
input during the build process, enabling automated and unattended Docker
image creation.

Signed-off-by: Andrea Mayer <andrea.mayer@uniroma2.it>

--- a/podman/Dockerfile
+++ b/podman/Dockerfile
@@ -4,6 +4,9 @@ FROM ubuntu:24.04
 # Update package lists
 RUN apt-get clean && apt-get update
 
+# Set environment variables to avoid prompts during build
+ENV DEBIAN_FRONTEND=noninteractive
+
 # Install any packages or dependencies here
 RUN apt-get install -y \
 	tmux \
