replace Ubuntu archive URL with a mirror to avoid '403 Forbidden' errors
This command replaces the default Ubuntu archive URL with a mirror URL
in the sources list to prevent 403 forbidden errors caused by the main
archive, ensuring more reliable access to package repositories.

Signed-off-by: Andrea Mayer <andrea.mayer@uniroma2.it>

--- a/podman/Dockerfile
+++ b/podman/Dockerfile
@@ -1,6 +1,10 @@
 # Use the Ubuntu 24.04 base image
 FROM ubuntu:24.04
 
+# Replace sources.list with the specified mirror
+RUN sed -i 's|http://archive.ubuntu.com/ubuntu/|http://ubuntu.mirror.garr.it/ubuntu/|g' \
+	/etc/apt/sources.list.d/ubuntu.sources
+
 # Update package lists
 RUN apt-get clean && apt-get update
 
