Add sample XDP program to drop IPv6 ICMPv6 packets
Add a simple XDP program that demonstrates how to drop IPv6 packets when
the next protocol is ICMPv6.
To compile the eBPF program, run the command:
  $ make -j$(nproc).

After compilation, copy the resulting .bpf.o file into the VM's shared
folder:
 $ make install

Signed-off-by: Andrea Mayer <andrea.mayer@uniroma2.it>

--- a/src/c/Makefile
+++ b/src/c/Makefile
@@ -111,6 +111,11 @@ $(OUTPUT)/%.skel.h: $(OUTPUT)/%.bpf.o | $(OUTPUT) $(BPFTOOL)
 # Build application binary
 $(KERNEL_APPS): %: $(OUTPUT)/%.bpf.o $(LIBBPF_OBJ) | $(OUTPUT)
 
+.PHONY: install
+install: shared
+	$(Q)find $(OUTPUT) -maxdepth 1 -name '*.bpf.o' \
+		! -name '*.tmp.bpf.o' -exec cp -av {} shared/ \;
+
 # delete failed targets
 .DELETE_ON_ERROR:
 
